import { Equatable, Result } from '../../../building-blocks';
import { LineItem } from '../line-item/line-item';
import { Money } from '../money/money/money';
import { checkNoDuplicate } from './checks/check-no-duplicate';
import { checkNonEmpty } from './checks/check-non-empty';
import { checkSameCurrency } from './checks/check-same-currency';

export class LineItems implements Equatable<ReadOnlyLineItems> {
    #items: LineItem[];
    #subtotal: Money;

    private constructor(items: LineItem[], subtotal: Money) {
        this.#items = items;
        this.#subtotal = subtotal;
    }

    get length(): number {
        return this.#items.length;
    }

    private static calculateSubtotal(items: LineItem[]): Money {
        let total = items[0].total;

        for (let i = 1; i < items.length; i++) {
            const addResult = total.add(items[i].total);
            if (addResult.isError()) {
                throw addResult.unwrapError();
            }
            total = addResult.unwrap();
        }

        return total;
    }

    get subtotal(): Money {
        return this.#subtotal;
    }

    forEach(callback: (item: LineItem) => void) {
        this.#items.forEach(callback);
    }

    contains(lineItem: LineItem): boolean {
        return this.#items.some((item) => item.equals(lineItem));
    }

    add(lineItem: LineItem) {
        return LineItems.create({ items: [...this.#items, lineItem] });
    }

    remove(lineItem: LineItem) {
        const lineItems = this.#items.filter((item) => !item.equals(lineItem));

        return LineItems.create({ items: lineItems });
    }

    find(predicate: (item: LineItem) => boolean): LineItem | undefined {
        return this.#items.find(predicate);
    }

    equals(other: ReadOnlyLineItems): boolean {
        if (other instanceof LineItems === false) {
            throw new Error('Invalid argument type');
        }

        return this.#items.every((item, index) =>
            item.equals(other.#items[index])
        );
    }

    static create({ items }: { items: LineItem[] }) {
        const duplicateError = checkNoDuplicate(items);

        if (duplicateError) {
            return Result.error(duplicateError);
        }

        const emptyError = checkNonEmpty(items);

        if (emptyError) {
            return Result.error(emptyError);
        }

        const currencyError = checkSameCurrency(items);

        if (currencyError) {
            return Result.error(currencyError);
        }

        const subtotal = this.calculateSubtotal(items);

        return Result.ok(new LineItems(items, subtotal));
    }

    toPlain() {
        return {
            items: this.#items.map((item) => item.toPlain()),
            subtotal: this.#subtotal.toPlain(),
        };
    }
}

export type ReadOnlyLineItems = Pick<
    LineItems,
    'length' | 'subtotal' | 'contains' | 'find' | 'equals' | 'forEach'
>;
